fix back button icon on safari

--- a/src/components/BackLink/styles.module.scss
+++ b/src/components/BackLink/styles.module.scss
@@ -14,3 +14,6 @@
   align-items: center;
   cursor: pointer;
 }
+.iconWrap {
+  width: 16px;
+}
